--- a/assessment.html
+++ b/assessment.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:url" content="https;//haruppe-tonothyme.github.io/assessment/assessment.html">
+    <meta property="og:title" content="今日の運勢は？">
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトを無駄な労力をかけて改造したサイトです！'>
+
     <title>今日の運勢は？</title>
     <link rel="stylesheet" href="assessment.css">
 </head>
