OGPに画像を追加

--- a/assessment.html
+++ b/assessment.html
@@ -7,6 +7,8 @@
     <meta property="og:url" content="https;//haruppe-tonothyme.github.io/assessment/assessment.html">
     <meta property="og:title" content="今日の運勢は？">
     <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトを無駄な労力をかけて改造したサイトです！'>
+    <meta property="og:image" content="スクリーンショット 2022-08-01 18.25.47.png">
+                                            
 
     <title>今日の運勢は？</title>
     <link rel="stylesheet" href="assessment.css">
