OGPに画像を追加

--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
     <meta property="og:url" content="https;//haruppe-tonothyme.github.io/assessment/assessment.html">
     <meta property="og:title" content="今日の運勢は？">
     <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトを無駄な労力をかけて改造したサイトです！'>
-    <meta property="og:image" content="スクリーンショット 2022-08-01 18.25.47.png">
+    <meta property="og:image" content="https://github.com/haruppe-tonothyme/assessment/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202022-08-01%2018.25.47.png?raw=true">
                                             
 
     <title>今日の運勢は？</title>
