--- a/assessment.html
+++ b/assessment.html
@@ -6,7 +6,7 @@
     <meta name="twitter:card" content="summary">
     <meta property="og:url" content="https://haruppe-tonothyme.github.io/assessment/assessment.html">
     <meta property="og:title" content="今日の運勢は？">
-    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトを無駄に労力をかけて改造したサイトです！>
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトを無駄に労力をかけて改造したサイトです！">
     <meta property="og:image" content="file:///Users/haruppe/Desktop/スクリーンショット%202022-08-01%2018.25.47.png" />                                            
 
     <title>今日の運勢は？</title>
